[gd_scene load_steps=6 format=3 uid="uid://eu6gvil3xmm6"]

[ext_resource type="Script" path="res://assets/scripts/zombie.gd" id="1_5yi05"]
[ext_resource type="Texture2D" uid="uid://cvjgi8vo8oycc" path="res://assets/images/player.png" id="2_b5hxy"]
[ext_resource type="PackedScene" uid="uid://c0kl1ipakwc4x" path="res://scenes/entities/corpse.tscn" id="2_sft75"]
[ext_resource type="Script" path="res://assets/scripts/health_comp.gd" id="3_mvwnm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h5ayu"]
radius = 9.05539

[node name="Zombie" type="CharacterBody2D" node_paths=PackedStringArray("health_comp") groups=["zombie"]]
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_5yi05")
corpse = ExtResource("2_sft75")
health_comp = NodePath("HealthComp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_h5ayu")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.364706, 1, 0.85098, 1)
texture = ExtResource("2_b5hxy")

[node name="HealthComp" type="Node" parent="."]
script = ExtResource("3_mvwnm")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_path_custom_color = Color(0.933333, 0, 0.470588, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 0.65

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_h5ayu")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
